--- a/style.css
+++ b/style.css
@@ -47,12 +47,12 @@ body {
 /* front part .................. */
 
 
-.click{
+/* .click{
     margin-top: 100px;
     font-size: 1.5rem;
     font-weight: 400;
     text-decoration: underline;
-}
+} */
 
 .cardFront {
     position: relative;
@@ -71,6 +71,7 @@ body {
     line-height: 1.5rem;
     letter-spacing: 0.15rem;
     padding: 10px;
+    font-weight: 900;
     word-spacing: 0.5rem;
     background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
     border-radius: 10px;
@@ -81,11 +82,12 @@ body {
     visibility: hidden;
 }
 
- 
+
 /* balloon.............. */
 
 .balloons {
     position: absolute;
+    transition: all 0.3s;
 }
 
 .balloonOne,
@@ -136,10 +138,17 @@ body {
     left: 43px;
 }
 
+.birthdayCard:hover .balloons {
+    visibility: hidden;
+}
+/* .birthdayCard:hover .cardFront {
+    background-image: url("./BirthdayGirl.jpg");
+} */
+
 /* second part................ */
 
 .cardInside {
-
+    
     background-color: aliceblue;
     overflow: hidden;
     padding: 20px;
@@ -150,6 +159,7 @@ body {
     left: 0;
     top: 0;
     box-shadow: inset 100px 20px 100px rgba(0, 0, 0, 0.2);
+
     /* transition: all 1s ; */
     /* transform-origin: left; */
 }
