--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+  @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -38,10 +40,6 @@ body {
     box-shadow:  inset 100px 20px 100px rgba(0, 0, 0, .2), 0 10px 100px rgba(0, 0, 0, 0.5);
 }
 
-.birthdayCard:hover .cardFront{
-    transform: rotateY(-160deg);
-    box-shadow:  inset 100px 20px 100px rgba(0, 0, 0, .2), 0 10px 100px rgba(0, 0, 0, 0.5);
-}
 
 
 /* front part .................. */
@@ -63,19 +61,29 @@ body {
     overflow: hidden;
     transform-origin: left;
     padding: 20px;
+    
+}
 
+.birthdayCard:hover .cardFront{
+    transform: rotateY(-160deg);
+    box-shadow:  inset 100px 20px 100px rgba(0, 0, 0, .2), 0 10px 100px rgba(0, 0, 0, 0.5);
+
+    background: url("./BirthdayGirl.jpg");
+    background-size: cover;
+    background-position: bottom;
 }
 
 .happy {
-    font-family: Tahoma, sans-serif;
+    font-family: 'Roboto', sans-serif;
     line-height: 1.5rem;
     letter-spacing: 0.15rem;
     padding: 10px;
     font-weight: 900;
+
     word-spacing: 0.5rem;
     background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
     border-radius: 10px;
-    transition: .3s;
+    transition: .2s;
 }
 
 .birthdayCard:hover .happy {
@@ -87,7 +95,7 @@ body {
 
 .balloons {
     position: absolute;
-    transition: all 0.3s;
+    transition: all 0.2s;
 }
 
 .balloonOne,
@@ -141,9 +149,8 @@ body {
 .birthdayCard:hover .balloons {
     visibility: hidden;
 }
-/* .birthdayCard:hover .cardFront {
-    background-image: url("./BirthdayGirl.jpg");
-} */
+
+
 
 /* second part................ */
 
@@ -177,7 +184,7 @@ body {
 .receiver {
     /* float: left; */
     display: block;
-    margin: 20px 0 10px;
+    margin: 15px 0 7px;
 
 }
 
@@ -189,7 +196,7 @@ body {
 }
 
 .sender {
-    margin: 20px 20px 0 0;
+    margin: 10px 20px 0 0;
     text-decoration: underline;
     text-align: end;
 }
