--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body {
 }
 
 .birthdayCard {
-    position: relative;
+    position: absolute;
     height: 350px;
     width: 250px;
     background-color: aliceblue;
@@ -202,3 +202,7 @@ body {
     text-align: end;
 }
 
+.confetti-canvas{
+    position: absolute;
+    z-index: 1;
+}
